<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Constraint" android:id="@+id/constraint_layout">

    <TextView
            android:text="@string/box_1"
            android:id="@+id/box_one"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            style="@style/textWhite"/>
    <TextView
            android:text="@string/box_2"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/box_two" style="@style/textWhite"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/box_one"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/box_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_three" style="@style/textWhite"
            app:layout_constraintBottom_toTopOf="@+id/box_four"
            app:layout_constraintStart_toEndOf="@+id/box_two"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/box_two"
    />
    <TextView
            android:text="@string/box_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_four" style="@style/textWhite"
            app:layout_constraintTop_toBottomOf="@+id/box_three"
            app:layout_constraintBottom_toTopOf="@+id/box_five" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toEndOf="@+id/box_two"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp" android:layout_marginBottom="16dp"/>
    <TextView
            android:text="@string/box_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_five" style="@style/textWhite"
            app:layout_constraintBottom_toBottomOf="@+id/box_two" app:layout_constraintTop_toBottomOf="@+id/box_four"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/box_two" android:layout_marginStart="16dp"
    />
    <TextView
            android:text="How to play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/const_label" android:textSize="24dp"
            android:fontFamily="@font/montserrat" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBaseline_toBaselineOf="@+id/textView12"/>
    <TextView
            android:text="Click boxes and buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="230dp" android:id="@+id/textView12" android:textSize="14sp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/box_five"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.807"/>
    <Button
            android:text="RED"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/red_btn"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_btn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/yellow_btn"/>
    <Button
            android:text="YELLOW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yellow_btn"
            app:layout_constraintStart_toEndOf="@+id/red_btn" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/blue_btn" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.932"/>
    <Button
            android:text="BLUE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blue_btn"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_btn"
            app:layout_constraintStart_toEndOf="@+id/yellow_btn" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>